--- a/templates/client_portal/dashboard.html
+++ b/templates/client_portal/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "client_portal/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Dashboard - SunriseGeo Portal{% endblock %}
 
