--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,8 @@
         .messages li.info { background-color: #d1ecf1; color: #0c5460; border-color: #bee5eb; }
         .messages li.warning { background-color: #fff3cd; color: #856404; border-color: #ffeeba; }
         .messages li.error { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb; }
-        
-        {% block extra_styles %}{% endblock %}
     </style>
+    {% block extra_styles %}{% endblock %}
 </head>
 <body class="flex flex-col min-h-screen bg-gray-100">
 
@@ -72,11 +71,10 @@
     <header class="bg-orange-500 text-white py-3 px-6 flex justify-between items-center shadow-md">
         <div class="text-xl font-bold">SunriseGeo</div>
         <nav>
+
             <ul class="flex space-x-6 text-sm font-semibold">
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'client_portal:dashboard' %}" class="hover:underline {% if view_name == 'dashboard' %}underline{% endif %}">Home</a></li>
-                    <li><a href="{% url 'client_portal:dashboard' %}" class="hover:underline {% if view_name == 'dashboard' %}underline{% endif %}">Projects</a></li>
-                    <li><a href="#" class="hover:underline">Reports</a></li>
+                    <li><a href="{% url 'client_portal:dashboard' %}" class="hover:underline {% if view_name == 'dashboard' %}underline{% endif %}">Dashboard</a></li>
                     <li>
                         <form action="{% url 'client_portal:logout' %}" method="post" style="display: inline;">
                             {% csrf_token %}
@@ -84,10 +82,10 @@
                         </form>
                     </li>
                 {% else %}
-                    <li><a href="#" class="hover:underline">Home</a></li>
                     <li><a href="{% url 'client_portal:login' %}" class="hover:underline {% if view_name == 'login' %}underline{% endif %}">Login</a></li>
                 {% endif %}
             </ul>
+
         </nav>
     </header>
 
