--- a/templates/client_portal/login.html
+++ b/templates/client_portal/login.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
-
-{% block title %}Login - SunriseGeo Portal{% endblock %}
+{% load static %}
+{% block title %}Login - MEG Engineers Portal{% endblock %}
 
 {% block content %}
-<!-- Main Content -->
-<main class="flex-grow flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-lg shadow-md">
+<!-- Main Content with Background Image -->
+<main class="flex-grow flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 bg-cover bg-center min-h-screen" style="background-image: url('{% static 'images/meg_building.jpg' %}');">
+  <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-lg shadow-md bg-opacity-95">
     <div>
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-        Welcome
+        Welcome to MEG Engineers
       </h2>
     </div>
     
@@ -25,7 +25,7 @@
             type="text"
             autocomplete="username"
             required
-            class="mt-1 p-3 block w-full border border-gray-300 rounded-md focus:outline-none focus:ring-orange-500 focus:border-orange-500"
+            class="mt-1 p-3 block w-full border border-gray-300 bg-white text-gray-900 rounded-md focus:outline-none focus:ring-orange-500 focus:border-orange-500"
           />
         </div>
         <div>
@@ -36,7 +36,7 @@
             type="password"
             autocomplete="current-password"
             required
-            class="mt-1 p-3 block w-full border border-gray-300 rounded-md focus:outline-none focus:ring-orange-500 focus:border-orange-500"
+            class="mt-1 p-3 block w-full border border-gray-300 bg-white text-gray-900 rounded-md focus:outline-none focus:ring-orange-500 focus:border-orange-500"
           />
         </div>
       </div>
